-- 학사관리시스템 PostgreSQL DDL
-- 새로 생성한 빈 데이터베이스에서 실행한다.

BEGIN;

CREATE SCHEMA IF NOT EXISTS academic
    AUTHORIZATION limhaean;

CREATE TABLE academic.departments (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    code VARCHAR(10) NOT NULL,
    name VARCHAR(100) NOT NULL,
    office_phone VARCHAR(20),
    CONSTRAINT pk_departments PRIMARY KEY (id),
    CONSTRAINT uq_departments_code UNIQUE (code),
    CONSTRAINT uq_departments_name UNIQUE (name)
);

CREATE TABLE academic.students (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    student_no VARCHAR(20) NOT NULL,
    department_id BIGINT NOT NULL,
    name VARCHAR(100) NOT NULL,
    email VARCHAR(200) NOT NULL,
    phone VARCHAR(20),
    birth_date DATE,
    year_level SMALLINT NOT NULL,
    status VARCHAR(20) NOT NULL DEFAULT 'ENROLLED',
    admission_date DATE NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT pk_students PRIMARY KEY (id),
    CONSTRAINT uq_students_student_no UNIQUE (student_no),
    CONSTRAINT uq_students_email UNIQUE (email),
    CONSTRAINT fk_students_department
        FOREIGN KEY (department_id) REFERENCES academic.departments (id),
    CONSTRAINT chk_students_year_level
        CHECK (year_level BETWEEN 1 AND 4),
    CONSTRAINT chk_students_status
        CHECK (status IN ('ENROLLED', 'LEAVE', 'GRADUATED'))
);

CREATE TABLE academic.professors (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    professor_no VARCHAR(20) NOT NULL,
    department_id BIGINT NOT NULL,
    name VARCHAR(100) NOT NULL,
    email VARCHAR(200) NOT NULL,
    phone VARCHAR(20),
    hire_date DATE NOT NULL,
    CONSTRAINT pk_professors PRIMARY KEY (id),
    CONSTRAINT uq_professors_professor_no UNIQUE (professor_no),
    CONSTRAINT uq_professors_email UNIQUE (email),
    CONSTRAINT fk_professors_department
        FOREIGN KEY (department_id) REFERENCES academic.departments (id)
);

CREATE TABLE academic.advisors (
    student_id BIGINT NOT NULL,
    professor_id BIGINT NOT NULL,
    assigned_at DATE NOT NULL DEFAULT CURRENT_DATE,
    CONSTRAINT pk_advisors PRIMARY KEY (student_id),
    CONSTRAINT fk_advisors_student
        FOREIGN KEY (student_id) REFERENCES academic.students (id),
    CONSTRAINT fk_advisors_professor
        FOREIGN KEY (professor_id) REFERENCES academic.professors (id)
);

CREATE INDEX idx_advisors_professor
    ON academic.advisors (professor_id, student_id);

CREATE TABLE academic.courses (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    course_code VARCHAR(20) NOT NULL,
    department_id BIGINT NOT NULL,
    name VARCHAR(100) NOT NULL,
    credits SMALLINT NOT NULL,
    description VARCHAR(500),
    CONSTRAINT pk_courses PRIMARY KEY (id),
    CONSTRAINT uq_courses_course_code UNIQUE (course_code),
    CONSTRAINT fk_courses_department
        FOREIGN KEY (department_id) REFERENCES academic.departments (id),
    CONSTRAINT chk_courses_credits
        CHECK (credits BETWEEN 1 AND 6)
);

CREATE TABLE academic.classrooms (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    building VARCHAR(100) NOT NULL,
    room_no VARCHAR(20) NOT NULL,
    capacity SMALLINT NOT NULL,
    CONSTRAINT pk_classrooms PRIMARY KEY (id),
    CONSTRAINT uq_classrooms_location UNIQUE (building, room_no),
    CONSTRAINT chk_classrooms_capacity CHECK (capacity > 0)
);

CREATE TABLE academic.course_offerings (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    course_id BIGINT NOT NULL,
    professor_id BIGINT NOT NULL,
    classroom_id BIGINT,
    academic_year SMALLINT NOT NULL,
    semester SMALLINT NOT NULL,
    section_no SMALLINT NOT NULL DEFAULT 1,
    capacity SMALLINT NOT NULL DEFAULT 30,
    schedule_info VARCHAR(100),
    CONSTRAINT pk_course_offerings PRIMARY KEY (id),
    CONSTRAINT uq_course_offerings
        UNIQUE (course_id, academic_year, semester, section_no),
    CONSTRAINT fk_offerings_course
        FOREIGN KEY (course_id) REFERENCES academic.courses (id),
    CONSTRAINT fk_offerings_professor
        FOREIGN KEY (professor_id) REFERENCES academic.professors (id),
    CONSTRAINT fk_offerings_classroom
        FOREIGN KEY (classroom_id) REFERENCES academic.classrooms (id),
    CONSTRAINT chk_offerings_year CHECK (academic_year >= 2000),
    CONSTRAINT chk_offerings_semester CHECK (semester IN (1, 2)),
    CONSTRAINT chk_offerings_section CHECK (section_no > 0),
    CONSTRAINT chk_offerings_capacity CHECK (capacity > 0)
);

CREATE TABLE academic.enrollments (
    student_id BIGINT NOT NULL,
    offering_id BIGINT NOT NULL,
    enrolled_at DATE NOT NULL DEFAULT CURRENT_DATE,
    status VARCHAR(20) NOT NULL DEFAULT 'ENROLLED',
    score NUMERIC(5,2),
    CONSTRAINT pk_enrollments PRIMARY KEY (student_id, offering_id),
    CONSTRAINT fk_enrollments_student
        FOREIGN KEY (student_id) REFERENCES academic.students (id),
    CONSTRAINT fk_enrollments_offering
        FOREIGN KEY (offering_id) REFERENCES academic.course_offerings (id),
    CONSTRAINT chk_enrollments_status
        CHECK (status IN ('ENROLLED', 'CANCELLED', 'COMPLETED')),
    CONSTRAINT chk_enrollments_score
        CHECK (score IS NULL OR score BETWEEN 0 AND 100)
);

CREATE INDEX idx_enrollments_offering
    ON academic.enrollments (offering_id, student_id);

COMMIT;
